[gd_scene load_steps=40 format=3 uid="uid://c7gblk6hpo0e2"]

[ext_resource type="FontFile" uid="uid://dc526gcuwx4sa" path="res://fonts/DungeonFont.ttf" id="1_214wj"]
[ext_resource type="Script" path="res://Robson.gd" id="1_c0772"]
[ext_resource type="Script" path="res://cartas.gd" id="1_nmt88"]
[ext_resource type="Texture2D" uid="uid://b885fmhu2y5yg" path="res://assets/Carta-roguelixo.png" id="2_eoa8d"]
[ext_resource type="Texture2D" uid="uid://ct6ud07qvypxb" path="res://assets/Walk.png" id="2_k14rp"]
[ext_resource type="Texture2D" uid="uid://cq55r5jicda1h" path="res://assets/Vida.png" id="3_4qynq"]
[ext_resource type="Texture2D" uid="uid://dpvb5nvbpqq3s" path="res://assets/vassoura- arma.png" id="3_qh7xw"]
[ext_resource type="Texture2D" uid="uid://ci025i63jak6w" path="res://assets/speed_card.png" id="5_e16uo"]
[ext_resource type="PackedScene" uid="uid://dh6uvbv0put5b" path="res://spawner.tscn" id="5_mg44o"]
[ext_resource type="Texture2D" uid="uid://cv1c6y7wqm1y2" path="res://assets/Dist.png" id="6_xnnax"]
[ext_resource type="AudioStream" uid="uid://dp3kaiyet86rf" path="res://sound/xp.MP3" id="8_bvq20"]
[ext_resource type="AudioStream" uid="uid://c4ovcduxxw2lh" path="res://sound/effect_menu1.MP3" id="8_n24oj"]
[ext_resource type="AudioStream" uid="uid://bhuuktb5nul0o" path="res://sound/hit.MP3" id="9_4hvlx"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_55g3q"]
size = Vector2(125, 123)

[sub_resource type="AtlasTexture" id="AtlasTexture_cjf7j"]
atlas = ExtResource("2_k14rp")
region = Rect2(0, 0, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_fpq1n"]
atlas = ExtResource("2_k14rp")
region = Rect2(32, 0, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_whynp"]
atlas = ExtResource("2_k14rp")
region = Rect2(48, 0, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_mn2iv"]
atlas = ExtResource("2_k14rp")
region = Rect2(16, 0, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_876gb"]
atlas = ExtResource("2_k14rp")
region = Rect2(0, 0, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_haegl"]
atlas = ExtResource("2_k14rp")
region = Rect2(0, 16, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_xlk4m"]
atlas = ExtResource("2_k14rp")
region = Rect2(0, 32, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_n2e8d"]
atlas = ExtResource("2_k14rp")
region = Rect2(0, 48, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_8sn7v"]
atlas = ExtResource("2_k14rp")
region = Rect2(32, 0, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_okv83"]
atlas = ExtResource("2_k14rp")
region = Rect2(32, 16, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_hvxhs"]
atlas = ExtResource("2_k14rp")
region = Rect2(32, 32, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_rh7bp"]
atlas = ExtResource("2_k14rp")
region = Rect2(32, 48, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_yb4hx"]
atlas = ExtResource("2_k14rp")
region = Rect2(48, 0, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_81jak"]
atlas = ExtResource("2_k14rp")
region = Rect2(48, 16, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_ejdsf"]
atlas = ExtResource("2_k14rp")
region = Rect2(48, 32, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_kl803"]
atlas = ExtResource("2_k14rp")
region = Rect2(48, 48, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_xv1di"]
atlas = ExtResource("2_k14rp")
region = Rect2(16, 48, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_l1y07"]
atlas = ExtResource("2_k14rp")
region = Rect2(16, 32, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_xqj8r"]
atlas = ExtResource("2_k14rp")
region = Rect2(16, 16, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_qbnbf"]
atlas = ExtResource("2_k14rp")
region = Rect2(16, 0, 16, 16)

[sub_resource type="SpriteFrames" id="SpriteFrames_xe5rc"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_cjf7j")
}],
"loop": true,
"name": &"idle_down",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_fpq1n")
}],
"loop": true,
"name": &"idle_left",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_whynp")
}],
"loop": true,
"name": &"idle_right",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_mn2iv")
}],
"loop": true,
"name": &"idle_up",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_876gb")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_haegl")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_xlk4m")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_n2e8d")
}],
"loop": true,
"name": &"walk_down",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_8sn7v")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_okv83")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_hvxhs")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_rh7bp")
}],
"loop": true,
"name": &"walk_left",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_yb4hx")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_81jak")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_ejdsf")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_kl803")
}],
"loop": true,
"name": &"walk_right",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_xv1di")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_l1y07")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_xqj8r")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_qbnbf")
}],
"loop": true,
"name": &"walk_up",
"speed": 5.0
}]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_ck8f2"]
size = Vector2(132, 129)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_2oma7"]
size = Vector2(77.9286, 180.086)

[sub_resource type="Animation" id="Animation_n0yiy"]
resource_name = "new_animation"
length = 0.2
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.2, 0.4),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 0,
"values": [Vector2(-15, -2), Vector2(19, -2), Vector2(-15, -2)]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_500dp"]
_data = {
"new_animation": SubResource("Animation_n0yiy")
}

[node name="Node2D" type="Node2D"]
metadata/_edit_vertical_guides_ = [2060.0, 6.0]
metadata/_edit_horizontal_guides_ = [1250.0, -9.0]

[node name="ColorRect" type="ColorRect" parent="."]
offset_right = 4413.0
offset_bottom = 2541.0
color = Color(0.25, 0.1495, 0.0825, 0.870588)

[node name="CanvasLayer" type="CanvasLayer" parent="."]
process_mode = 3

[node name="Xp" type="ProgressBar" parent="CanvasLayer"]
modulate = Color(0.0352941, 0.945098, 0, 1)
offset_left = 24.0
offset_top = 7.0
offset_right = 438.0
offset_bottom = 34.0
max_value = 50.0
show_percentage = false

[node name="Control" type="Control" parent="CanvasLayer"]
layout_mode = 3
anchor_right = 1.42083
anchor_bottom = 1.32333
offset_top = 3.0
offset_bottom = 3.0
grow_horizontal = 2
grow_vertical = 2
metadata/_edit_use_anchors_ = true

[node name="ColorRect" type="ColorRect" parent="CanvasLayer/Control"]
visible = false
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_top = -17.0
offset_right = -1.00159
offset_bottom = 9.99969
grow_horizontal = 2
grow_vertical = 2
scale = Vector2(1.00312, 1)
color = Color(0, 0, 0, 0.47451)

[node name="VBoxContainer" type="VBoxContainer" parent="CanvasLayer/Control/ColorRect"]
layout_mode = 0
offset_left = 2.0
offset_top = 345.0
offset_right = 762.0
offset_bottom = 522.0
scale = Vector2(1.87519, 1.87519)

[node name="Voltar" type="Button" parent="CanvasLayer/Control/ColorRect/VBoxContainer"]
clip_contents = true
layout_mode = 2
theme_override_colors/font_hover_color = Color(0.645746, 0.300631, 0.170564, 1)
theme_override_colors/font_pressed_color = Color(0.4, 0.172549, 0.0862745, 0.815686)
theme_override_colors/font_focus_color = Color(0.4, 0.172549, 0.0862745, 1)
theme_override_colors/font_color = Color(0.399028, 0.171773, 0.0870879, 1)
theme_override_fonts/font = ExtResource("1_214wj")
theme_override_font_sizes/font_size = 41
text = "Voltar"
flat = true

[node name="Menu" type="Button" parent="CanvasLayer/Control/ColorRect/VBoxContainer"]
clip_contents = true
layout_mode = 2
theme_override_colors/font_hover_color = Color(0.645746, 0.300631, 0.170564, 1)
theme_override_colors/font_pressed_color = Color(0.4, 0.172549, 0.0862745, 0.815686)
theme_override_colors/font_focus_color = Color(0.4, 0.172549, 0.0862745, 1)
theme_override_colors/font_color = Color(0.399028, 0.171773, 0.0870879, 1)
theme_override_fonts/font = ExtResource("1_214wj")
theme_override_font_sizes/font_size = 41
text = "Menu
"
flat = true

[node name="Pause" type="Label" parent="CanvasLayer/Control/ColorRect"]
layout_mode = 0
offset_left = 2.0
offset_top = 2.0
offset_right = 853.0
offset_bottom = 209.0
scale = Vector2(1.68, 1.68)
theme_override_colors/font_color = Color(0.451669, 0.180639, 0, 1)
theme_override_colors/font_shadow_color = Color(0.863197, 0.37203, 3.85046e-07, 1)
theme_override_colors/font_outline_color = Color(0, 0, 0.729412, 1)
theme_override_constants/shadow_outline_size = 15
theme_override_fonts/font = ExtResource("1_214wj")
theme_override_font_sizes/font_size = 70
text = "Pausado"
horizontal_alignment = 1
vertical_alignment = 1

[node name="Cartas" type="Control" parent="CanvasLayer"]
layout_mode = 3
anchors_preset = 0
offset_right = 1443.0
offset_bottom = 902.0
script = ExtResource("1_nmt88")

[node name="ColorRect" type="ColorRect" parent="CanvasLayer/Cartas"]
visible = false
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0, 0, 0, 0.47451)

[node name="HBoxContainer" type="HBoxContainer" parent="CanvasLayer/Cartas/ColorRect"]
layout_mode = 0
offset_left = 1.00002
offset_top = 211.0
offset_right = 393.0
offset_bottom = 339.0
scale = Vector2(3.65224, 3.67413)

[node name="Vida" type="TextureRect" parent="CanvasLayer/Cartas/ColorRect/HBoxContainer"]
layout_mode = 2
texture = ExtResource("2_eoa8d")

[node name="Vida" type="Sprite2D" parent="CanvasLayer/Cartas/ColorRect/HBoxContainer/Vida"]
position = Vector2(54, 42)
scale = Vector2(0.96875, 1)
texture = ExtResource("3_4qynq")

[node name="NomeV" type="Label" parent="CanvasLayer/Cartas/ColorRect/HBoxContainer/Vida"]
modulate = Color(0, 0, 0, 1)
layout_mode = 0
offset_left = 29.0
offset_top = 17.0
offset_right = 115.0
offset_bottom = 38.0
scale = Vector2(0.639999, 0.639999)
theme_override_fonts/font = ExtResource("1_214wj")
theme_override_font_sizes/font_size = 20
text = "asddadasda"

[node name="DescricaoV" type="Label" parent="CanvasLayer/Cartas/ColorRect/HBoxContainer/Vida"]
modulate = Color(0, 0, 0, 1)
offset_left = 31.8443
offset_top = 56.8842
offset_right = 79.8443
offset_bottom = 99.8842
theme_override_fonts/font = ExtResource("1_214wj")
theme_override_font_sizes/font_size = 10
autowrap_mode = 3

[node name="btnV" type="Button" parent="CanvasLayer/Cartas/ColorRect/HBoxContainer/Vida"]
clip_contents = true
layout_mode = 0
offset_left = 22.0
offset_top = 13.0
offset_right = 86.0
offset_bottom = 102.0
flat = true

[node name="Vel" type="TextureRect" parent="CanvasLayer/Cartas/ColorRect/HBoxContainer"]
layout_mode = 2
texture = ExtResource("2_eoa8d")

[node name="Vel" type="Sprite2D" parent="CanvasLayer/Cartas/ColorRect/HBoxContainer/Vel"]
position = Vector2(55, 41)
texture = ExtResource("5_e16uo")

[node name="NomeVel" type="Label" parent="CanvasLayer/Cartas/ColorRect/HBoxContainer/Vel"]
modulate = Color(0, 0, 0, 1)
offset_left = 29.0
offset_top = 17.0
offset_right = 106.0
offset_bottom = 34.0
scale = Vector2(0.639999, 0.639999)
theme_override_fonts/font = ExtResource("1_214wj")
theme_override_font_sizes/font_size = 20
text = "asddadasda"

[node name="DescricaoVel" type="Label" parent="CanvasLayer/Cartas/ColorRect/HBoxContainer/Vel"]
modulate = Color(0, 0, 0, 1)
offset_left = 31.8443
offset_top = 56.8842
offset_right = 79.8443
offset_bottom = 99.8842
theme_override_fonts/font = ExtResource("1_214wj")
theme_override_font_sizes/font_size = 10
autowrap_mode = 3

[node name="btnVel" type="Button" parent="CanvasLayer/Cartas/ColorRect/HBoxContainer/Vel"]
clip_contents = true
offset_left = 22.0
offset_top = 13.0
offset_right = 86.0
offset_bottom = 102.0
flat = true

[node name="Dist" type="TextureRect" parent="CanvasLayer/Cartas/ColorRect/HBoxContainer"]
layout_mode = 2
texture = ExtResource("2_eoa8d")

[node name="Dist" type="Sprite2D" parent="CanvasLayer/Cartas/ColorRect/HBoxContainer/Dist"]
position = Vector2(54, 38)
texture = ExtResource("6_xnnax")

[node name="NomeDist" type="Label" parent="CanvasLayer/Cartas/ColorRect/HBoxContainer/Dist"]
modulate = Color(0, 0, 0, 1)
offset_left = 29.0
offset_top = 17.0
offset_right = 106.0
offset_bottom = 34.0
scale = Vector2(0.639999, 0.639999)
theme_override_fonts/font = ExtResource("1_214wj")
theme_override_font_sizes/font_size = 20
text = "asddadasda"

[node name="DescricaoDist" type="Label" parent="CanvasLayer/Cartas/ColorRect/HBoxContainer/Dist"]
modulate = Color(0, 0, 0, 1)
offset_left = 31.8443
offset_top = 56.8842
offset_right = 79.8443
offset_bottom = 99.8842
theme_override_fonts/font = ExtResource("1_214wj")
theme_override_font_sizes/font_size = 10
autowrap_mode = 3

[node name="btnDist" type="Button" parent="CanvasLayer/Cartas/ColorRect/HBoxContainer/Dist"]
clip_contents = true
offset_left = 22.0
offset_top = 13.0
offset_right = 86.0
offset_bottom = 102.0
flat = true

[node name="Robson" type="CharacterBody2D" parent="."]
position = Vector2(1133, 540)
script = ExtResource("1_c0772")

[node name="ColRobson" type="CollisionShape2D" parent="Robson"]
position = Vector2(-0.5, -1.5)
shape = SubResource("RectangleShape2D_55g3q")

[node name="AniRobson" type="AnimatedSprite2D" parent="Robson"]
position = Vector2(-1, 0)
scale = Vector2(6.21875, 6.21875)
sprite_frames = SubResource("SpriteFrames_xe5rc")
animation = &"walk_down"

[node name="AreaRobson" type="Area2D" parent="Robson"]

[node name="ColRobArea" type="CollisionShape2D" parent="Robson/AreaRobson"]
position = Vector2(0, -0.5)
shape = SubResource("RectangleShape2D_ck8f2")

[node name="arma" type="Sprite2D" parent="Robson"]
position = Vector2(-15, -2)
scale = Vector2(1.49219, 1.49219)
texture = ExtResource("3_qh7xw")
offset = Vector2(49.72, 0)

[node name="AArma" type="Area2D" parent="Robson/arma"]
position = Vector2(73.7173, -2.01047)
scale = Vector2(0.21875, 0.181676)

[node name="ColArma" type="CollisionShape2D" parent="Robson/arma/AArma"]
position = Vector2(-22.3077, 17.9843)
shape = SubResource("RectangleShape2D_2oma7")

[node name="AnimationPlayer" type="AnimationPlayer" parent="Robson/arma"]
libraries = {
"": SubResource("AnimationLibrary_500dp")
}

[node name="Camera2D" type="Camera2D" parent="Robson"]
zoom = Vector2(0.5, 0.5)
limit_left = 0
limit_top = 0

[node name="TextureRect" type="TextureRect" parent="Robson"]
offset_left = -126.0
offset_top = -95.0
offset_right = -94.0
offset_bottom = -63.0
texture = ExtResource("3_4qynq")

[node name="Vida" type="ProgressBar" parent="Robson/TextureRect"]
modulate = Color(1, 0, 0, 1)
offset_left = 34.0
offset_top = 4.0
offset_right = 216.0
offset_bottom = 31.0
max_value = 3.0
value = 3.0
show_percentage = false

[node name="valorVida" type="Label" parent="Robson/TextureRect/Vida"]
modulate = Color(0.0295066, 0.0295066, 0.0295066, 1)
layout_mode = 0
offset_top = 2.0
offset_right = 181.0
offset_bottom = 25.0
theme_override_fonts/font = ExtResource("1_214wj")
theme_override_font_sizes/font_size = 41
text = "1"
horizontal_alignment = 1

[node name="spawner" parent="." instance=ExtResource("5_mg44o")]
position = Vector2(592, 166)
scale = Vector2(1.0032, 1)

[node name="EnemyHandler" type="Node2D" parent="."]
position = Vector2(8, 2)

[node name="coleta" type="AudioStreamPlayer" parent="."]
stream = ExtResource("8_bvq20")
volume_db = -20.0

[node name="hit" type="AudioStreamPlayer" parent="."]
stream = ExtResource("9_4hvlx")
volume_db = -10.0

[node name="menu" type="AudioStreamPlayer" parent="."]
stream = ExtResource("8_n24oj")
volume_db = -10.0

[connection signal="mouse_entered" from="CanvasLayer/Control/ColorRect/VBoxContainer/Voltar" to="Robson" method="_on_voltar_mouse_entered"]
[connection signal="pressed" from="CanvasLayer/Control/ColorRect/VBoxContainer/Voltar" to="Robson" method="_on_voltar_pressed"]
[connection signal="mouse_entered" from="CanvasLayer/Control/ColorRect/VBoxContainer/Menu" to="Robson" method="_on_menu_mouse_entered"]
[connection signal="pressed" from="CanvasLayer/Control/ColorRect/VBoxContainer/Menu" to="Robson" method="_on_menu_pressed"]
[connection signal="pressed" from="CanvasLayer/Cartas/ColorRect/HBoxContainer/Vida/btnV" to="Robson" method="_on_btn_v_pressed"]
[connection signal="pressed" from="CanvasLayer/Cartas/ColorRect/HBoxContainer/Vel/btnVel" to="Robson" method="_on_btn_vel_pressed"]
[connection signal="pressed" from="CanvasLayer/Cartas/ColorRect/HBoxContainer/Dist/btnDist" to="Robson" method="_on_btn_dist_pressed"]
[connection signal="area_entered" from="Robson/AreaRobson" to="Robson" method="_on_area_robson_area_entered"]
[connection signal="area_entered" from="Robson/arma/AArma" to="Robson" method="_on_a_arma_area_entered"]
